--- a/.github/workflows/run_unittests.yml
+++ b/.github/workflows/run_unittests.yml
@@ -1,3 +1,4 @@
+# Trigger CI
 on:
   pull_request:
   push:
@@ -8,7 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2     # checkout the repo
       - run: dotnet test src/Tests/VanillaCloudStorageClientTest/VanillaCloudStorageClientTest.csproj --logger "trx;LogFileName=test-results.trx" --results-directory "TestResults"
-      
+
       - name: Test Report
         uses: dorny/test-reporter@v1
         if: success() || failure()    # run this step even if previous step failed
